--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,12 @@
-# http://www.scala-sbt.org/0.13/docs/Travis-CI-with-sbt.html
+# Use container-based infrastructure
+sudo: false
 language: scala
 scala:
-  - 2.11.7
-jdk:
-  - oraclejdk8
+  - 2.11.11
+  - 2.12.3
+jdk: oraclejdk8
 script:
   - sbt ++$TRAVIS_SCALA_VERSION compile
-  # Tricks to avoid unnecessary cache updates
-  - find $HOME/.sbt -name "*.lock" | xargs rm
-  - find $HOME/.ivy2 -name "ivydata-*.properties" | xargs rm
 notifications:
   email: false
   webhooks:
@@ -16,11 +14,13 @@ notifications:
       - https://webhooks.gitter.im/e/d340d4885b44767bdd8f
     on_success: change  # options: [always|never|change] default: always
     on_failure: always  # options: [always|never|change] default: always
-    on_start: false
-# Use container-based infrastructure
-sudo: false
+    on_start: never
 # These directories are cached to S3 at the end of the build
 cache:
   directories:
     - $HOME/.ivy2/cache
     - $HOME/.sbt/boot/
+before_cache:
+  # Tricks to avoid unnecessary cache updates
+  - find $HOME/.ivy2 -name "ivydata-*.properties" -delete
+  - find $HOME/.sbt -name "*.lock" -delete
